--- a/config/locales/hy.yml
+++ b/config/locales/hy.yml
@@ -147,6 +147,7 @@ hy:
         delete: Հեռացնել
         edit: Խմբագրել
         edit_roles: Խմբագրել տեսակը
+        merge: Միաձուլել
         perm_delete: Հեռացնել օգտահաշիվը առանց վերականգնման հնարավորության
         unban: Հանել արգելափակումը
         undelete: Վերականգնել
