--- a/config/locales/zh_CN.yml
+++ b/config/locales/zh_CN.yml
@@ -147,6 +147,7 @@ zh_CN:
         delete: 删除
         edit: 编辑
         edit_roles: 编辑用户角色
+        merge: 合并
         perm_delete: 永久删除
         unban: 取消禁止用户
         undelete: 撤消删除
